Add Get,Post,Delete API integrations, Refactoring.
- Integration for all the api's.
- Add node to package.json to support env files.
- Add fontstyle cdn link to index.html.
- Add edit and delete svg icons in assets folder.
- Add a workaround to support svg files (due to bug in parcel).

--- a/src/Features/Header/styles.css
+++ b/src/Features/Header/styles.css
@@ -1,8 +1,11 @@
 .header {
     width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
     text-align: center;
     border-bottom: solid black 1px;
+    font-family: 'Nanum Pen Script';
+    font-size: xx-large;
+    color: coral;
+    padding: 10px 0px;
+    margin: 0;
 }
 
