--- a/src/Features/CompletedList/styles.css
+++ b/src/Features/CompletedList/styles.css
@@ -1,10 +1,24 @@
 .completed-item{
     padding:10px;
-    margin: 10px;
+    margin: 10px 0px 10px 0px;
     border: 1px solid ;
     border-radius: 4px;
     word-break : break-all;
+    position: relative;
+    display:flex;
+}
 
+
+.completed-item-text{
+    text-align: center;
+    width: calc(100% - 65px);
+}
+
+.completed-item > button{
+    position: absolute ;
+    right: 10px;
+    border: none;
+    background: none;
 }
 
 .completed-section{
